[gd_scene load_steps=7 format=3 uid="uid://cjn2w6euy16b3"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_qhryx"]
[ext_resource type="FontFile" uid="uid://rxlsv4k4dbco" path="res://fonts/PoetsenOne-Regular.ttf" id="2_rwiwk"]
[ext_resource type="Texture2D" uid="uid://bd42xtn7mwhi3" path="res://graphics/fondo1.png" id="3_htdgs"]
[ext_resource type="Texture2D" uid="uid://by64c62ahf1ci" path="res://graphics/ScoreBoard.png" id="5_gg6pg"]
[ext_resource type="PackedScene" uid="uid://6cp721vqo3qh" path="res://audios.tscn" id="5_ohlyx"]
[ext_resource type="PackedScene" uid="uid://dly3orgt457s8" path="res://score.tscn" id="5_wwwbo"]

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qhryx")

[node name="Jugar" type="Button" parent="."]
custom_minimum_size = Vector2(180, 100)
layout_mode = 0
offset_left = 408.0
offset_top = 176.0
offset_right = 597.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0.52549, 0.678431, 0.145098, 1)
theme_override_fonts/font = ExtResource("2_rwiwk")
theme_override_font_sizes/font_size = 60
text = "JUGAR
"

[node name="Creditos" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = 368.0
offset_top = 336.0
offset_right = 646.0
offset_bottom = 436.0
theme_override_colors/font_color = Color(0.52549, 0.678431, 0.145098, 1)
theme_override_fonts/font = ExtResource("2_rwiwk")
theme_override_font_sizes/font_size = 60
text = "CREDITOS"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(504, 401)
scale = Vector2(1.255, 0.802)
texture = ExtResource("3_htdgs")
metadata/_edit_lock_ = true

[node name="Score" parent="." instance=ExtResource("5_wwwbo")]

[node name="MuteButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 888.0
offset_top = 8.0
offset_right = 996.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.52549, 0.678431, 0.145098, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.678431, 0.145098, 1)
theme_override_colors/font_hover_pressed_color = Color(0.980392, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.52549, 0.678431, 0.145098, 1)
theme_override_colors/font_disabled_color = Color(0.976471, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.952941, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rwiwk")
theme_override_font_sizes/font_size = 20
text = "AUDIO"

[node name="Sprite2D" type="Sprite2D" parent="MuteButton"]
z_index = -1
position = Vector2(52, 34)
texture = ExtResource("5_gg6pg")

[node name="Audios" parent="." instance=ExtResource("5_ohlyx")]

[connection signal="pressed" from="Jugar" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="MuteButton" to="." method="_on_mute_toggled"]
